--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,52 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  list-style: none;
+}
+
+body {
+  background-color: #fff;
+  color: black;
+}
 
 #root {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 90vh;
+  top: 0;
+  left: 0;
+}
+
+header {
+  top: 0;
+  display: flex;
   align-items: center;
-  width: 100%;
-  height: 100vh;
+  justify-content: space-between;
+  width: 95%;
+  height: 15vh;
+  margin: 0 2.5%;
 }
 
-.display {
-  color: #fff;
-  background-color: #a3a3a3;
-  font-size: 1.4em;
-  text-align: end;
-  padding-right: 10px;
+header > h1 {
+  font-size: 65px;
 }
 
-table {
-  border-collapse: collapse;
+nav > ul {
+  padding: 0;
 }
 
-td {
-  text-align: center;
-  width: 60px;
-  height: 40px;
-  margin: 0;
-  border: 1px solid #cacaca;
-  background-color: #e4e4e4;
+header > nav > ul > li {
+  font-size: 1.5rem;
+  list-style: none;
+  display: inline;
+  margin-right: 5%;
 }
 
-.transp {
-  background-color: rgba(255, 255, 255, 0.1);
+.link {
+  text-decoration: none;
+  color: black;
 }
 
-button {
-  width: 100%;
-  height: 100%;
-  border-style: none;
-}
-
-button:hover {
-  background-color: #a3a3a3;
-}
-
-button:active {
-  background-color: black;
-  color: #fff;
-}
-
-.orange > button {
-  background-color: #ff7f59;
-}
-
-.orange > button:hover {
-  background-color: #e06336;
+.link:hover {
+  color: blue;
 }
